--- a/example/storybook/src/components/Input/index.stories.mdx
+++ b/example/storybook/src/components/Input/index.stories.mdx
@@ -1,9 +1,14 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
+import { AccessibleInput } from './Input';
+import { Wrapper } from '../Wrapper';
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
+import { useState } from 'react';
 
-<Meta title="components/Input" />
+<Meta title="components/Input" />;
 
 # Input
-
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-input--input-story" />
-</Canvas>
