--- a/example/storybook/src/components/InputGroup/index.stories.mdx
+++ b/example/storybook/src/components/InputGroup/index.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="components/Input" />
+<Meta title="components/InputGroup" />
 
 # InputGroup
 
