--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -3,6 +3,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/Button" />
 
 import { AccessibleButton } from './Button';
+import { Wrapper } from '../Wrapper';
+
 import {
   AppProvider,
   CodePreview,
@@ -22,12 +24,14 @@ A Button component is used to create clickable elements that perform an action w
       code: ` 
       function App () {
         return (
+          <Wrapper>
          <Button>
             <Button.Text>Button</Button.Text>
           </Button>
+          </Wrapper>
     )
     }`,
-      scope: { Button: AccessibleButton },
+      scope: { Button: AccessibleButton, Wrapper },
       argsType: {},
     }}
   />
@@ -138,96 +142,98 @@ export default () => (
 Contains all button related layout style props and actions.
 It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
 
-<Table>
-  <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-    <Table.TR>
-      <Table.TH>
-        <Text>Prop</Text>
-      </Table.TH>
-      <Table.TH>
-        <Text>Type</Text>
-      </Table.TH>
-      <Table.TH>
-        <Text>Default</Text>
-      </Table.TH>
-      <Table.TH>
-        <Text>Description</Text>
-      </Table.TH>
-    </Table.TR>
-  </Table.THead>
-  <Table.TBody>
-    <Table.TR>
-      <Table.TD>
-        <Text>isLoading</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>bool</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>false</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>When true, its loading state activates.</Text>
-      </Table.TD>
-    </Table.TR>
-    <Table.TR>
-      <Table.TD>
-        <Text>isHovered</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>bool</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>false</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>To manually set hover to the button.</Text>
-      </Table.TD>
-    </Table.TR>
-    <Table.TR>
-      <Table.TD>
-        <Text>isPressed</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>bool</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>false</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>To manually set pressable state to the button.</Text>
-      </Table.TD>
-    </Table.TR>
-    <Table.TR>
-      <Table.TD>
-        <Text>isFocused</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>bool</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>false</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>To manually set focused state to the button.</Text>
-      </Table.TD>
-    </Table.TR>
-    <Table.TR>
-      <Table.TD>
-        <Text>isDisabled</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>bool</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>false</Text>
-      </Table.TD>
-      <Table.TD>
-        <Text>To manually set disable to the button.</Text>
-      </Table.TD>
-    </Table.TR>
-  </Table.TBody>
-</Table>
+<AppProvider>
+  <Table>
+    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+      <Table.TR>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>
+          <Text>isLoading</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>When true, its loading state activates.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isHovered</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set hover to the button.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isPressed</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set pressable state to the button.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isFocused</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set focused state to the button.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isDisabled</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set disable to the button.</Text>
+        </Table.TD>
+      </Table.TR>
+    </Table.TBody>
+  </Table>
+</AppProvider>
 
 ### Button.Text
 
@@ -356,12 +362,14 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
       code: ` 
       function App () {
         return (
+          <Wrapper>
         <Button>
           <Button.Text>Button</Button.Text>
         </Button>
+        </Wrapper>
     )
     }`,
-      scope: { Button: AccessibleButton },
+      scope: { Button: AccessibleButton, Wrapper },
       argsType: {},
     }}
   />
