--- a/example/storybook/src/components/HStack/index.stories.mdx
+++ b/example/storybook/src/components/HStack/index.stories.mdx
@@ -3,8 +3,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/HStack" />
 
 import { AccessibleHStack } from './HStack';
-import { AppProvider, CodePreview } from '@gluestack/design-system';
+import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 import { View } from 'react-native';
+import { Wrapper } from '../Wrapper';
 
 # HStack
 
@@ -17,7 +18,7 @@ A `HStack` component is used to create a horizontal stack layout for child compo
     metaData={{
       code: ` 
       function App () {
-        return (<HStack
+        return (<Wrapper><HStack
         space="md"
         sx={{ justifyContent: 'center', alignItems: 'center' }}
       >
@@ -33,9 +34,9 @@ A `HStack` component is used to create a horizontal stack layout for child compo
         <View
           style={{ height: 20, width: 20, backgroundColor: 'red' }}
         />
-      </HStack>)
+      </HStack></Wrapper>)
     }`,
-      scope: { HStack: AccessibleHStack, View },
+      scope: { HStack: AccessibleHStack, View, Wrapper },
       argsType: {},
     }}
   />
@@ -106,9 +107,42 @@ export default () => (
 Contains all View related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-| Prop  | Type                        | Default | Description                        |
-| ----- | --------------------------- | ------- | ---------------------------------- |
-| space | number / string / undefined |         | It sets the space between children |
+<AppProvider>
+  <Table>
+    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+      <Table.TR>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>
+          <Text>space</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>number / string / undefined</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text></Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>It sets the space between children</Text>
+        </Table.TD>
+      </Table.TR>
+    </Table.TBody>
+  </Table>
+</AppProvider>
 
 ## Example
 
@@ -119,7 +153,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     metaData={{
       code: `
       function App () {
-       return (<HStack
+       return (<Wrapper><HStack
         space="md"
         sx={{ justifyContent: 'center', alignItems: 'center' }}
       >
@@ -135,9 +169,9 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
         <View
           style={{ height: 20, width: 20, backgroundColor: 'red' }}
         />
-      </HStack>)
+      </HStack></Wrapper>)
     }`,
-      scope: { HStack: AccessibleHStack, View },
+      scope: { HStack: AccessibleHStack, View, Wrapper },
       argsType: {},
     }}
   />
