--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -2,9 +2,67 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Checkbox" />
 
+import {
+  Table,
+  AppProvider,
+  CodePreview,
+  CheckIcon,
+} from '@gluestack/design-system';
+import { AccessibleCheckbox, Checkbox, Logger } from './Checkbox';
+import { Wrapper } from '../Wrapper';
+import { useState } from 'react';
+
 # Checkbox
 
 A Checkbox component is used to provide a way for users to select one or more options from a set of predefined choices. In React Native, the Checkbox component can be generated using a third-party accessibility-focused library that combines "styled views" and "pressable" to define the layout, visual design, and behavior of the component.
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+          const [values, setValues] = useState([]);
+        return (
+    <Wrapper>
+        <Checkbox.Group value={values} onChange={setValues}>
+        <Checkbox
+          size="md"
+          isInvalid={false}
+          value="Label 1"
+          aria-label="Label 1"
+          accessibilityLabel="Checkbox"
+        >
+          <Checkbox.Indicator>
+            <Checkbox.Icon>
+              <CheckIcon />
+            </Checkbox.Icon>
+          </Checkbox.Indicator>
+          <Checkbox.Label>Label 1</Checkbox.Label>
+        </Checkbox>
+        <Checkbox
+          size="md"
+          aria-label="Label 2"
+          value="Label 2"
+          accessibilityLabel="Checkbox"
+        >
+          <Checkbox.Indicator>
+            <Checkbox.Icon>
+              <CheckIcon />
+            </Checkbox.Icon>
+          </Checkbox.Indicator>
+          <Checkbox.Label>Label 2</Checkbox.Label>
+        </Checkbox>
+      </Checkbox.Group>
+      </Wrapper>)}`,
+      scope: { Checkbox: AccessibleCheckbox, Wrapper, useState, CheckIcon },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
 
 ## Features
 
@@ -112,18 +170,93 @@ export default () => (
 Contains all Checkbox related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-| Prop             | Type     | Default | Description                                                                                                                                      |
-| ---------------- | -------- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
-| value            | string   | -       | The value to be used in the checkbox input. This is the value that will be returned on form submission.                                          |
-| onChange         | function | -       | Function called when the state of the checkbox changes.                                                                                          |
-| defaultIsChecked | bool     | false   | If true, the checkbox will be initially checked.                                                                                                 |
-| isChecked        | bool     | false   | When true, its checkbox is checked. the checkbox will be checked. You'll need to pass onChange to update it's value (since it's now controlled). |
-| isDisabled       | bool     | false   | To manually set disable to the checkbox.                                                                                                         |
-| isInvalid        | bool     | false   | To manually set invalid to the checkbox.                                                                                                         |
-| isReadOnly       | bool     | false   | To manually set readonly to the checkbox.                                                                                                        |
-| isHovered        | bool     | false   | To manually set hover to the checkbox.                                                                                                           |
-| isFocusVisible   | bool     | false   | To manually set focus visible state to the checkbox. checkbox.                                                                                   |
-| isIndeterminate  | bool     | false   | To manually set indeterminate to the checkbox.                                                                                                   |
+<AppProvider>
+  <Table>
+    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+      <Table.TR >
+        <Table.TH>Prop</Table.TH>
+        <Table.TH>Type</Table.TH>
+        <Table.TH>Default</Table.TH>
+        <Table.TH>Description</Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>value</Table.TD>
+        <Table.TD>string</Table.TD>
+        <Table.TD>-</Table.TD>
+        <Table.TD>
+         The value to be used in the checkbox input. This is the value that will be returned on form submission.
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>onChange</Table.TD>
+        <Table.TD>function</Table.TD>
+        <Table.TD>-</Table.TD>
+        <Table.TD>
+          Function called when the state of the checkbox changes.
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>defaultIsChecked</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>
+          If Table.TRue, the checkbox will be initially checked.
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isChecked</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>
+          When Table.TRue, its checkbox is checked. the checkbox will be
+          checked. You'll need to pass onChange to update it's value (since it's
+          now conTable.TRolled).
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isDisabled</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>To manually set disable to the checkbox.</Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isInvalid</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>To manually set invalid to the checkbox.</Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isReadOnly</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>To manually set readonly to the checkbox.</Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isHovered</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>To manually set hover to the checkbox.</Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isFocusVisible</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>
+          To manually set focus visible state to the checkbox. checkbox.
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>isIndeterminate</Table.TD>
+        <Table.TD>bool</Table.TD>
+        <Table.TD>false</Table.TD>
+        <Table.TD>To manually set indeterminate to the checkbox.</Table.TD>
+      </Table.TR>
+    </Table.TBody>
+
+  </Table>
+</AppProvider>
 
 ### Checkbox.Indicator
 
@@ -150,12 +283,87 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 Contains all Group related layout style props and actions.
 It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
-| Prop     | Type     | Default | Description                                                            |
-| -------- | -------- | ------- | ---------------------------------------------------------------------- |
-| value    | string[] | -       | The value of the checkbox group.                                       |
-| onChange | function | -       | The callback fired when any children Checkbox is checked or unchecked. |
+| Prop     | Type           | Default | Description                                                            |
+| -------- | -------------- | ------- | ---------------------------------------------------------------------- |
+| value    | sTable.TRing[] | -       | The value of the checkbox group.                                       |
+| onChange | function       | -       | The callback fired when any children Checkbox is checked or unchecked. |
+
+<AppProvider>
+  <Table>
+    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+      <Table.TR>
+        <Table.TH>Prop</Table.TH>
+        <Table.TH>Type</Table.TH>
+        <Table.TH>Default</Table.TH>
+        <Table.TH>Description</Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>value</Table.TD>
+        <Table.TD>string[]</Table.TD>
+        <Table.TD>-</Table.TD>
+        <Table.TD>The value of the checkbox group.</Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>onChange</Table.TD>
+        <Table.TD>function</Table.TD>
+        <Table.TD>-</Table.TD>
+        <Table.TD>
+          The callback fired when any children Checkbox is checked or unchecked.
+        </Table.TD>
+      </Table.TR>
+    </Table.TBody>
+  </Table>
+</AppProvider>
 
 ## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+          const [values, setValues] = useState([]);
+        return (
+    <Wrapper>
+        <Checkbox.Group value={values} onChange={setValues}>
+        <Checkbox
+          size="md"
+          isInvalid={false}
+          value="Label 1"
+          aria-label="Label 1"
+          accessibilityLabel="Checkbox"
+        >
+          <Checkbox.Indicator>
+            <Checkbox.Icon>
+              <CheckIcon />
+            </Checkbox.Icon>
+          </Checkbox.Indicator>
+          <Checkbox.Label>Label 1</Checkbox.Label>
+        </Checkbox>
+        <Checkbox
+          size="md"
+          aria-label="Label 2"
+          value="Label 2"
+          accessibilityLabel="Checkbox"
+        >
+          <Checkbox.Indicator>
+            <Checkbox.Icon>
+              <CheckIcon />
+            </Checkbox.Icon>
+          </Checkbox.Indicator>
+          <Checkbox.Label>Label 2</Checkbox.Label>
+        </Checkbox>
+      </Checkbox.Group>
+      </Wrapper>)}`,
+      scope: { Checkbox: AccessibleCheckbox, Wrapper, useState, CheckIcon },
+      argsType: {},
+    }}
+  />
+</AppProvider>
 
 ## Acceessibility
 
@@ -173,7 +381,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 - `@react-native-aria/checkbox`
 - `@react-native-aria/focus`
-- `@universa11y/form-control`
+- `@universa11y/form-conTable.TRol`
 - `@universa11y/react-native-aria`
 - `@universa11y/utils`
 - `react-native-svg`
