--- a/example/storybook/src/components/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Pressable/index.stories.mdx
@@ -2,10 +2,218 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Pressable" />
 
+import { PressableTemp as Pressable, Text } from './Pressable';
+import { Wrapper } from '../Wrapper';
+
+import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
+
 # Pressable
 
-A Pressable component is used to create clickable elements that perform an action when pressed. In React Native, the Pressable component is typically generated using "styled views" and "pressable" to define the layout, visual design, and behavior of the button.
+A Pressable component is used to create clickable elements that perform an action when pressed.
 
-<Canvas style={{ height: 200 }}>
-  <Story id="components-stories-pressable--pressable-story" />
-</Canvas>
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (
+          <Wrapper>
+            <Pressable>
+              <Text>Pressable</Text>
+            </Pressable>
+          </Wrapper>
+    )
+    }`,
+      scope: { Pressable: Pressable, Wrapper, Text },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+## Features
+
+- Keyboard support for actions.
+- Support for hover, focus and active states.
+
+## Installation
+
+```jsx
+yarn add @universa11y/pressable
+```
+
+## Usage
+
+```jsx
+import { createPressable } from '@universa11y/pressable';
+const Pressable = createPressable({
+  Root,
+});
+```
+
+These are the styled components that we need to pass in the creator API:
+
+### Root
+
+```jsx
+const Root = styled(
+  Pressable,
+  {
+    ...
+  },
+);
+```
+
+## Anatomy
+
+```jsx
+export default () => (
+  <Pressable>
+    <Text></Text>
+  </Pressable>
+);
+```
+
+## API Reference
+
+### Pressable
+
+Contains all Pressable related layout style props and actions.
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+<AppProvider>
+  <Table>
+    <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
+      <Table.TR>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
+      </Table.TR>
+    </Table.THead>
+    <Table.TBody>
+      <Table.TR>
+        <Table.TD>
+          <Text>isLoading</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>When true, its loading state activates.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isHovered</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set hover to the Pressable.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isPressed</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set pressable state to the Pressable.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isFocused</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set focused state to the Pressable.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isDisabled</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set disable to the Pressable.</Text>
+        </Table.TD>
+      </Table.TR>
+    </Table.TBody>
+  </Table>
+</AppProvider>
+
+## Example
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: ` 
+      function App () {
+        return (
+          <Wrapper>
+            <Pressable>
+              <Text>Pressable</Text>
+            </Pressable>
+         </Wrapper>
+    )
+    }`,
+      scope: { Pressable: Pressable, Wrapper, Text },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+## Accessibility
+
+### Keyboard
+
+- Tab: Moves focus to the next focusable element.
+- `Shift + Tab`: Moves focus to the previous focusable element.
+- Enter: Triggers the Pressable's action.
+
+### Screen Reader
+
+- VoiceOver: When the Pressable is focused, the screen reader will announce the Pressable's label and its current state.
+
+## Dependencies
+
+- `@universa11y/utils`
+- `@react-native-aria/focus`
+- `react-native-svg`
