feat: development fixes

--- a/example/storybook/src/components/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Slider/index.stories.mdx
@@ -3,7 +3,12 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/Slider" />
 
 import { AccessibleSlider } from './Slider';
-import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
 import { Text } from 'react-native';
 import { Wrapper } from '../Wrapper';
 import { useState } from 'react';
