--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -7,6 +7,7 @@ import {
   AppProvider,
   CodePreview,
   CheckIcon,
+  Text,
 } from '@gluestack/design-system';
 import { AccessibleCheckbox, Checkbox, Logger } from './Checkbox';
 import { Wrapper } from '../Wrapper';
