--- a/example/storybook/src/components/HStack/index.stories.mdx
+++ b/example/storybook/src/components/HStack/index.stories.mdx
@@ -3,7 +3,12 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 <Meta title="components/HStack" />
 
 import { AccessibleHStack } from './HStack';
-import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
 import { View } from 'react-native';
 import { Wrapper } from '../Wrapper';
 
