--- a/example/storybook/src/components/Radio/index.stories.mdx
+++ b/example/storybook/src/components/Radio/index.stories.mdx
@@ -2,7 +2,12 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Radio" />
 
-import { Table, AppProvider, CodePreview } from '@gluestack/design-system';
+import {
+  Table,
+  AppProvider,
+  CodePreview,
+  Text,
+} from '@gluestack/design-system';
 import { AccessibleRadio, CircleIcon } from './Radio';
 import { Wrapper } from '../Wrapper';
 import { useState } from 'react';
