--- a/example/storybook/src/components/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Checkbox/index.stories.mdx
@@ -174,88 +174,172 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 <AppProvider>
   <Table>
     <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
-      <Table.TR >
-        <Table.TH>Prop</Table.TH>
-        <Table.TH>Type</Table.TH>
-        <Table.TH>Default</Table.TH>
-        <Table.TH>Description</Table.TH>
+      <Table.TR>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
       </Table.TR>
     </Table.THead>
     <Table.TBody>
       <Table.TR>
-        <Table.TD>value</Table.TD>
-        <Table.TD>string</Table.TD>
-        <Table.TD>-</Table.TD>
         <Table.TD>
-         The value to be used in the checkbox input. This is the value that will be returned on form submission.
+          <Text>value</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>string</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            The value to be used in the checkbox input. This is the value that
+            will be returned on form submission.
+          </Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>onChange</Table.TD>
-        <Table.TD>function</Table.TD>
-        <Table.TD>-</Table.TD>
         <Table.TD>
-          Function called when the state of the checkbox changes.
+          <Text>onChange</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>function</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>Function called when the state of the checkbox changes.</Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>defaultIsChecked</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
         <Table.TD>
-          If Table.TRue, the checkbox will be initially checked.
+          <Text>defaultIsChecked</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>If Table.TRue, the checkbox will be initially checked.</Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>isChecked</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
         <Table.TD>
-          When Table.TRue, its checkbox is checked. the checkbox will be
-          checked. You'll need to pass onChange to update it's value (since it's
-          now conTable.TRolled).
+          <Text>isChecked</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            When Table.TRue, its checkbox is checked. the checkbox will be
+            checked. You'll need to pass onChange to update it's value (since
+            it's now conTable.TRolled).
+          </Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>isDisabled</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To manually set disable to the checkbox.</Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>isInvalid</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To manually set invalid to the checkbox.</Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>isReadOnly</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To manually set readonly to the checkbox.</Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>isHovered</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To manually set hover to the checkbox.</Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>isFocusVisible</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
         <Table.TD>
-          To manually set focus visible state to the checkbox. checkbox.
+          <Text>isDisabled</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set disable to the checkbox.</Text>
         </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>isIndeterminate</Table.TD>
-        <Table.TD>bool</Table.TD>
-        <Table.TD>false</Table.TD>
-        <Table.TD>To manually set indeterminate to the checkbox.</Table.TD>
+        <Table.TD>
+          <Text>isInvalid</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set invalid to the checkbox.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isReadOnly</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set readonly to the checkbox.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isHovered</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set hover to the checkbox.</Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isFocusVisible</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            To manually set focus visible state to the checkbox. checkbox.
+          </Text>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Text>isIndeterminate</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>bool</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>false</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>To manually set indeterminate to the checkbox.</Text>
+        </Table.TD>
       </Table.TR>
     </Table.TBody>
-
   </Table>
 </AppProvider>
 
@@ -288,25 +372,50 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
   <Table>
     <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
       <Table.TR>
-        <Table.TH>Prop</Table.TH>
-        <Table.TH>Type</Table.TH>
-        <Table.TH>Default</Table.TH>
-        <Table.TH>Description</Table.TH>
+        <Table.TH>
+          <Text>Prop</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Type</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Default</Text>
+        </Table.TH>
+        <Table.TH>
+          <Text>Description</Text>
+        </Table.TH>
       </Table.TR>
     </Table.THead>
     <Table.TBody>
       <Table.TR>
-        <Table.TD>value</Table.TD>
-        <Table.TD>string[]</Table.TD>
-        <Table.TD>-</Table.TD>
-        <Table.TD>The value of the checkbox group.</Table.TD>
+        <Table.TD>
+          <Text>value</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>string[]</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>The value of the checkbox group.</Text>
+        </Table.TD>
       </Table.TR>
       <Table.TR>
-        <Table.TD>onChange</Table.TD>
-        <Table.TD>function</Table.TD>
-        <Table.TD>-</Table.TD>
         <Table.TD>
-          The callback fired when any children Checkbox is checked or unchecked.
+          <Text>onChange</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>function</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>-</Text>
+        </Table.TD>
+        <Table.TD>
+          <Text>
+            The callback fired when any children Checkbox is checked or
+            unchecked.
+          </Text>
         </Table.TD>
       </Table.TR>
     </Table.TBody>
