--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -5,12 +5,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 import { MenuTemp as Menu, Text, Pressable, View } from './Menu';
 import { Wrapper } from '../Wrapper';
 
-import {
-  AppProvider,
-  CodePreview,
-  Table,
-  Text,
-} from '@gluestack/design-system';
+import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
 
 # Menu
 
