--- a/example/storybook/src/components/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Menu/index.stories.mdx
@@ -2,10 +2,15 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="components/Menu" />
 
-import { MenuTemp as Menu, Text, Pressable, View } from './Menu';
+import { MenuTemp as Menu, Pressable, View } from './Menu';
 import { Wrapper } from '../Wrapper';
 
-import { AppProvider, CodePreview, Table } from '@gluestack/design-system';
+import {
+  AppProvider,
+  CodePreview,
+  Table,
+  Text,
+} from '@gluestack/design-system';
 
 # Menu
 
